Include realscripts again (was previously included by xltxtra)

--- a/packet.cls
+++ b/packet.cls
@@ -22,6 +22,7 @@
 \RequirePackage[normalem]{ulem}
 
 \RequirePackage[log-declarations=false]{xparse}
+\RequirePackage{realscripts}
 \RequirePackage{fontspec}
 \defaultfontfeatures{Mapping=tex-text}
 \newcommand{\myfont}{Brill}
