Custom packet name and author prefixes

--- a/packet.cls
+++ b/packet.cls
@@ -84,7 +84,7 @@
 \tournamentname{} \tournamentyear{}: \subtitle{}\\
 \textbf{%{\packet{}} {\packetnumber{}} --- {
 \packetname}\\
-by \authors{}
+\authors{}
 
 \medskip
 \begin{lb}{☞}
