Fix unicode non-breaking space in latex

--- a/packet.cls
+++ b/packet.cls
@@ -20,6 +20,8 @@
 
 % TYPOGRAPHY
 \RequirePackage[normalem]{ulem}
+\usepackage{newunicodechar}
+\newunicodechar{ }{~}
 
 \RequirePackage[log-declarations=false]{xparse}
 \RequirePackage{realscripts}
